<resources>
    <string name="app_name">PracticalTest01Var05</string>
    <string name="navigate_to_secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="top_left">TOP LEFT</string>
    <string name="top_right">TOP RIGHT</string>
    <string name="center">CENTER</string>
    <string name="bottom_left">BOTTOM LEFT</string>
    <string name="bottom_right">BOTTOM RIGHT</string>
    <string name="press_some_buttons">Press some buttons</string>
    <string name="verify">VERIFY</string>
    <string name="cancel">CANCEL</string>
    <string name="no_button_was_pressed">No button was pressed</string>
</resources>